# qt-messenger

./: .gitignore  CMakeLists.txt  QtMessenger.pro  README.md
client/: CMakeLists.txt  chatbubble.cpp  chatbubble.h  client.pro  contactlistitem.cpp  contactlistitem.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  networkclient.cpp  networkclient.h  registerwindow.cpp  registerwindow.h  resources.qrc  utils.cpp  utils.h
client/resources/: dark.qss  light.qss
server/: CMakeLists.txt  database.cpp  database.h  main.cpp  message.cpp  message.h  server.cpp  server.h  server.pro  user.cpp  user.h
